Correct - image dimensions/overflow issue by removing rows in grid

--- a/css/store.css
+++ b/css/store.css
@@ -67,7 +67,7 @@ body {
 .main {
   display: grid;
   grid-template-columns: 10% 30% 10% 50%;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: ;
 }
 
 .formDiv {
@@ -83,13 +83,16 @@ body {
 
 .mainImageDiv {
   grid-column: 4/5;
-  grid-row: 1/6;
-  background-image: url("/level-2/storeImage.jpg");
-  background-size: auto auto;
+  grid-row: 1/5;
+  /* background-image: url("/level-2/storeImage.jpg"); */
+  /* background-size: auto auto; */
   background-repeat: no-repeat;
 }
 .mainImage {
-  /* background-image: url('/level-2/storeImage.jpg'); */
+  background-image: url('/level-2/storeImage.jpg');
+  background-size: cover ;
+  height: 100%;
+  width: 100%;
 }
 
 .verticalFlex {
@@ -162,8 +165,9 @@ select {
 }
 
 .footerIcons {
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
+  padding: 10px;
   border: 2px solid grey;
   border-radius: 50%;
 }
